# libkempozer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  kmz_config.h.in  makefile
.github/ISSUE_TEMPLATE/: feature_request.md
cmake/: arguments.cmake  configuration.cmake  gd_image_file_support.cmake
doc/: home
docs/: CNAME  LICENSE.md  _config.yml  code_of_conduct.md  contributing.md  home.md  index.md  license.md  style_guidelines.md
docs/_includes/: menu.html
docs/_navigation_links/: code_of_conduct.md  contributing.md  home.md  license.md  style_guidelines.md
docs/assets/css/: main.scss  menu.scss
docs/css/: menu.scss
include/: libkempozer.h
include/libkempozer/: color.h  colors.h  draw.h  gdfile.h  geometries.h  geometry.h  image.h  io.h
src/: kmz_color.c  kmz_color.h  kmz_core.c  kmz_core.h  kmz_draw.c  kmz_draw.h  kmz_experimental.h  kmz_filter.c  kmz_filter.h  kmz_gd_2x_image_file.c  kmz_gd_2x_image_file.h  kmz_geometry.c  kmz_geometry.h  kmz_image.c  kmz_image.h  kmz_image_file.c  kmz_image_file.h  kmz_lib.h  kmz_matrix.c  kmz_matrix.h  kmz_numerics.h  kmz_shared.h  kmz_transform.c  kmz_transform.h  kmz_utilities.c  kmz_utilities.h  libkempozer.h
